--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         
                     <div class="contact-txt " data-aos="zoom-in-up">
                         
-                            <form name="contact-form" id="form" action="/submit.html">
+                            <form name="contact-form" id="form" action="submit.html">
 
                             <input type="text" id="Name" placeholder="Enter Your Name *" required>
                             <input type="email" id="Email" placeholder="Enter Your Email address *" required>
