--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
           }).then(function (response) {
           console.log('SUCCESS!', response.status, response.text); 
          document.getElementById("form").reset();
-          window.open('submit.html','-self');
+          window.open('submit.html','_self');
                 
       }, function (error) {
           console.log('FAILED...', error);
