--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     </p>
                     <h6 style="font-size:22px; position: relative">I'm  <span class="auto-type" id="multi" style="font-size:22px"></span></h6><br>
           
-                    <button type="submit" id="sbtn" onclick="window.open('images/vinit.PDF')"><i class="fa fa-download"></i> Download Resume !</button>
+                    <button type="submit" id="sbtn" onclick="window.open('images/vinit.pdf')"><i class="fa fa-download"></i> Download Resume !</button>
                 </div>
                 <div class="hm" data-aos="zoom-out-left">
                     <img src="images/vinitimg.jpg" class="fit" data-tilt data-tilt-speed="70" data-tilt-max="10">
