--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <p>Experience with Different Programming lang.. </p>
                     <ul>
                         <p>Connect over:  <a href="https://www.linkedin.com/in/vinit-parmar-2a6a5a218" target="_blank"> <i class="fa-brands fa-linkedin"></i> LinkedIn </a></p>
-                        <p>Visit: <a href="https://github.com/vinitparmar16" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a></p>
+                        <p>Visit: <a href="https://github.com/parmarvinit" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a></p>
                         <p>Follow on: <a href="https://instagram.com/vinittt_016?igshid=NDk5N2NlZjQ=" target="_blank" ><i class="fa-brands fa-instagram"></i> Instagram(@vinittt_016)</a></p>
                         <p>Contact Me: <a href="http://wa.me/+919104719971?text=Hello Vinit" target="_blank" title="WhatsApp"><i class="fa-brands fa-whatsapp"></i> +91-9104719971</a></p>
                         <p>Join Me On: <a hhref=" https://discord.com/" target="_blank"><i class="fa-brands fa-discord"></i> Discode(vinit016#0511)</a></p>
